# search-by-form

./: Dockerfile  README.md  datalist.json  docker-compose.yml  fill.py  pyproject.toml  test_client.py  wsgi.py
search_by_form/: db.py  main.py  utils.py  validators.py
