[tool.poetry]
name = "search-by-form"
version = "0.1.0"
description = ""
authors = ["A-V-tor <avtorca4@gmail.com>"]
readme = "README.md"
packages = [{include = "search_by_form"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "3.0.0"
pymongo = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
